ProdIND/ProdPrograms/force-app/main/default/objects/Case/fields/Accept_Case__c.field-meta.xml
<CustomField>
    <fullName>Accept_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created as part of new enhancement CISP-3974.</description>
    <label>Accept Case</label>
    <type>Checkbox</type>
</CustomField>