ProdIND/ProdPrograms/force-app/main/default/objects/Case/fields/Affected_User__c.field-meta.xml
<CustomField>
    <fullName>Affected_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Affected User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>