ProdIND/ProdPrograms/force-app/main/default/objects/Case/fields/Agent_BL_Code__c.field-meta.xml
<CustomField>
    <fullName>Agent_BL_Code__c</fullName>
    <formula>IF(Loan_Application__r.Agent_BL_code__c!=null,Loan_Application__r.Agent_BL_code__c,&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agent BL Code</label>
    <type>Text</type>
</CustomField>