ProdIND/ProdPrograms/force-app/main/default/objects/Case/fields/Agent_Work_Status__c.field-meta.xml
<CustomField>
    <fullName>Agent_Work_Status__c</fullName>
    <label>Agent Work Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>