ProdIND/ProdPrograms/force-app/main/default/objects/Case/fields/AMLAndCMUCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>AMLAndCMUCreatedDate__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AML and CMU Assigned Date</label>
    <type>DateTime</type>
</CustomField>