ProdIND/ProdPrograms/force-app/main/default/objects/Case/fields/Asset_Verification__c.field-meta.xml
<CustomField>
    <fullName>Asset_Verification__c</fullName>
    <formula>IF( RecordType.Name == &apos;Asset Verification&apos;,IF(ISPICKVAL($User.UserType, &apos;PowerPartner&apos;), HYPERLINK($Label.IBL_Community_Partners_URL+&quot;/s/av-page?c__recordId=&quot;+Id, &quot;Navigate to AV&quot;, &quot;_blank&quot;), HYPERLINK(&quot;/lightning/cmp/c__LOSAV?c__recordId=&quot;+Id, &quot;Navigate to AV&quot;, &quot;_blank&quot;)),&apos;&apos;)</formula>
    <label>Asset Verification</label>
    <type>Text</type>
</CustomField>