ProdIND/ProdPrograms/force-app/main/default/objects/Case/fields/Case_Document__c.field-meta.xml
<CustomField>
    <fullName>Case_Document__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Document</label>
    <referenceTo>Documents__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>