ProdIND/ProdPrograms/force-app/main/default/objects/Case/fields/Case_Owner_Custom__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_Custom__c</fullName>
    <formula>Owner:Queue.QueueName+Owner:User.LastName+Owner:User.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Owner</label>
    <type>Text</type>
</CustomField>