ProdIND/ProdPrograms/force-app/main/default/objects/Case/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Login</fullName>
            </value>
            <value>
                <fullName>Loan Application</fullName>
            </value>
            <value>
                <fullName>FI</fullName>
            </value>
            <value>
                <fullName>Credit Processing</fullName>
            </value>
            <value>
                <fullName>Post Sanction</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>FI mapping issue</fullName>
                <isActive>false</isActive>
                <label>FI mapping issue</label>
            </value>
            <value>
                <fullName>loan application issue</fullName>
                <isActive>false</isActive>
                <label>loan application issue</label>
            </value>
            <value>
                <fullName>login issue</fullName>
                <isActive>false</isActive>
                <label>login issue</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>