ProdIND/ProdPrograms/force-app/main/default/objects/Case/fields/CMU_Accept__c.field-meta.xml
<CustomField>
    <fullName>CMU_Accept__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CMU Accept</label>
    <type>Checkbox</type>
</CustomField>