ProdIND/ProdPrograms/force-app/main/default/objects/Case/fields/CMU_Case_Accepted_By__c.field-meta.xml
<CustomField>
    <fullName>CMU_Case_Accepted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created as part of new enhancement CISP-3974.</description>
    <label>CMU Case Accepted By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases4</relationshipName>
    <type>Lookup</type>
</CustomField>