ProdIND/ProdPrograms/force-app/main/default/objects/Case/fields/CMU_Case_Submitted_By__c.field-meta.xml
<CustomField>
    <fullName>CMU_Case_Submitted_By__c</fullName>
    <label>CMU Case Submitted By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>