ProdIND/ProdPrograms/force-app/main/default/objects/Case/fields/CMU_CaseTeamMember_FI_User__c.field-meta.xml
<CustomField>
    <fullName>CMU_CaseTeamMember_FI_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CMU CaseTeamMember FI User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases6</relationshipName>
    <type>Lookup</type>
</CustomField>