ProdIND/ProdPrograms/force-app/main/default/objects/Case/fields/CMU_CaseTeamMember_Loanapp_Owner__c.field-meta.xml
<CustomField>
    <fullName>CMU_CaseTeamMember_Loanapp_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CMU CaseTeamMember Loanapp Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases7</relationshipName>
    <type>Lookup</type>
</CustomField>