ProdIND/ProdPrograms/force-app/main/default/objects/Case/fields/CMU_Rejected__c.field-meta.xml
<CustomField>
    <fullName>CMU_Rejected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CMU Rejected</label>
    <type>Checkbox</type>
</CustomField>