ProdIND/ProdPrograms/force-app/main/default/objects/Case/fields/CMU_User__c.field-meta.xml
<CustomField>
    <fullName>CMU_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CMU User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases3</relationshipName>
    <type>Lookup</type>
</CustomField>