ProdIND/ProdPrograms/force-app/main/default/objects/Case/fields/First_Response_Cust_milestone_completed__c.field-meta.xml
<CustomField>
    <fullName>First_Response_Cust_milestone_completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Response Cust milestone completed</label>
    <type>Checkbox</type>
</CustomField>