ProdIND/ProdPrograms/force-app/main/default/objects/Case/fields/Fix_details__c.field-meta.xml
<CustomField>
    <fullName>Fix_details__c</fullName>
    <label>Fix details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>