ProdIND/ProdPrograms/force-app/main/default/objects/Case/fields/Flowbypassvalidationdatetime__c.field-meta.xml
<CustomField>
    <fullName>Flowbypassvalidationdatetime__c</fullName>
    <label>Flowbypassvalidationdatetime</label>
    <type>DateTime</type>
</CustomField>