ProdIND/ProdPrograms/force-app/main/default/objects/Case/fields/IncidentManagement_Description__c.field-meta.xml
<CustomField>
    <fullName>IncidentManagement_Description__c</fullName>
    <label>Incident Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>