ProdIND/ProdPrograms/force-app/main/default/objects/Case/fields/IncidentManagement_Stage__c.field-meta.xml
<CustomField>
    <fullName>IncidentManagement_Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Qualification</fullName>
            </value>
            <value>
                <fullName>Needs Analysis</fullName>
            </value>
            <value>
                <fullName>Proposal</fullName>
            </value>
            <value>
                <fullName>Closed Won</fullName>
            </value>
            <value>
                <fullName>Loan Initiation</fullName>
            </value>
            <value>
                <fullName>Additional Details</fullName>
            </value>
            <value>
                <fullName>Asset Details</fullName>
            </value>
            <value>
                <fullName>Vehicle Valuation</fullName>
            </value>
            <value>
                <fullName>Loan Details</fullName>
            </value>
            <value>
                <fullName>Income Details</fullName>
            </value>
            <value>
                <fullName>Insurance Details</fullName>
            </value>
            <value>
                <fullName>Credit Processing</fullName>
            </value>
            <value>
                <fullName>Final Terms</fullName>
            </value>
            <value>
                <fullName>Journey Stop</fullName>
            </value>
            <value>
                <fullName>Vehicle Insurance</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Customer Code Addition</fullName>
            </value>
            <value>
                <fullName>Disbursement Request Preparation</fullName>
            </value>
            <value>
                <fullName>CAM and Approval</fullName>
            </value>
            <value>
                <fullName>Final Offer</fullName>
            </value>
            <value>
                <fullName>Post Sanction Checks and Documentation</fullName>
            </value>
            <value>
                <fullName>Journey Restart</fullName>
            </value>
            <value>
                <fullName>Revoke</fullName>
            </value>
            <value>
                <fullName>Offer Screen</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Pre Disbursement Check</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>