ProdIND/ProdPrograms/force-app/main/default/objects/Case/fields/IncidentManagement_State__c.field-meta.xml
<CustomField>
    <fullName>IncidentManagement_State__c</fullName>
    <formula>IF(TEXT(Loan_Application__r.Account.State__c)!=null,TEXT(Loan_Application__r.Account.State__c),&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>State</label>
    <type>Text</type>
</CustomField>