ProdIND/ProdPrograms/force-app/main/default/objects/Case/fields/IncidentManagement_Sub_Stage__c.field-meta.xml
<CustomField>
    <fullName>IncidentManagement_Sub_Stage__c</fullName>
    <label>Sub Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>User Details</fullName>
            </value>
            <value>
                <fullName>Capture current residential address</fullName>
            </value>
            <value>
                <fullName>Capture permanent residential address</fullName>
            </value>
            <value>
                <fullName>Capture PAN or Other KYC</fullName>
            </value>
            <value>
                <fullName>Capture Dedupe</fullName>
            </value>
            <value>
                <fullName>Vehicle Dedupe</fullName>
            </value>
            <value>
                <fullName>Declared Income/Required Loan Amount</fullName>
            </value>
            <value>
                <fullName>Bank Account Check</fullName>
            </value>
            <value>
                <fullName>View Application Details</fullName>
            </value>
            <value>
                <fullName>CIBIL</fullName>
            </value>
            <value>
                <fullName>Field Investigation</fullName>
            </value>
            <value>
                <fullName>Credit Assessment</fullName>
            </value>
            <value>
                <fullName>Income Details</fullName>
            </value>
            <value>
                <fullName>Valuation IDV</fullName>
            </value>
            <value>
                <fullName>Final Terms</fullName>
            </value>
            <value>
                <fullName>Insurance Details</fullName>
            </value>
            <value>
                <fullName>Exposure Analysis</fullName>
            </value>
            <value>
                <fullName>Income</fullName>
            </value>
            <value>
                <fullName>CAM and Approval Log</fullName>
            </value>
            <value>
                <fullName>Risk Summary</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Tele-verification &lt;Post Sanction&gt;</fullName>
            </value>
            <value>
                <fullName>Vehicle Inspection and RC Check</fullName>
            </value>
            <value>
                <fullName>Structured EMI</fullName>
            </value>
            <value>
                <fullName>Security Mandate</fullName>
            </value>
            <value>
                <fullName>Additional Documents</fullName>
            </value>
            <value>
                <fullName>Invoice</fullName>
            </value>
            <value>
                <fullName>IHM</fullName>
            </value>
            <value>
                <fullName>Loan Agreement</fullName>
            </value>
            <value>
                <fullName>Signing the e-Agreement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>