ProdIND/ProdPrograms/force-app/main/default/objects/Case/fields/Is_Case_Owner_User__c.field-meta.xml
<CustomField>
    <fullName>Is_Case_Owner_User__c</fullName>
    <formula>OwnerId =  $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Case Owner User</label>
    <type>Checkbox</type>
</CustomField>