ProdIND/ProdPrograms/force-app/main/default/objects/Case/fields/IsFlowvalidationBypassed__c.field-meta.xml
<CustomField>
    <fullName>IsFlowvalidationBypassed__c</fullName>
    <formula>Flowbypassvalidationdatetime__c &gt; Now()-0.00005787037037037037</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsFlowvalidationBypassed</label>
    <type>Checkbox</type>
</CustomField>