ProdIND/ProdPrograms/force-app/main/default/objects/Case/fields/Last_L1_User__c.field-meta.xml
<CustomField>
    <fullName>Last_L1_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last L1 User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>