ProdIND/ProdPrograms/force-app/main/default/objects/Case/fields/Lead_Creation_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Lead_Creation_DateTime__c</fullName>
    <formula>Loan_Application__r.CreatedDate</formula>
    <label>Lead Creation DateTime</label>
    <type>DateTime</type>
</CustomField>