ProdIND/ProdPrograms/force-app/main/default/objects/Case/fields/Loan_Application_No__c.field-meta.xml
<CustomField>
    <fullName>Loan_Application_No__c</fullName>
    <formula>Loan_Application__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loan Application No.</label>
    <type>Text</type>
</CustomField>