ProdIND/ProdPrograms/force-app/main/default/objects/Case/fields/Loan_Number__c.field-meta.xml
<CustomField>
    <fullName>Loan_Number__c</fullName>
    <label>Loan Number</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>