ProdIND/ProdPrograms/force-app/main/default/objects/Case/fields/LOB_formulae__c.field-meta.xml
<CustomField>
    <fullName>LOB_formulae__c</fullName>
    <formula>IF(TEXT(Loan_Application__r.Product_Type__c)=&quot;Two Wheeler&quot;,&quot;TW&quot;,IF(TEXT(Loan_Application__r.Product_Type__c)=&quot;Passenger Vehicles&quot;,&quot;PV&quot;,&quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LOB</label>
    <type>Text</type>
</CustomField>