ProdIND/ProdPrograms/force-app/main/default/objects/Case/fields/NCM_SCM_Loan_Approval_status__c.field-meta.xml
<CustomField>
    <fullName>NCM_SCM_Loan_Approval_status__c</fullName>
    <label>NCM/SCM  Loan Approval status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approve</fullName>
            </value>
            <value>
                <fullName>Reject</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>