ProdIND/ProdPrograms/force-app/main/default/objects/Case/fields/Overall_RCU_Agency_Sampling_Reason__c.field-meta.xml
<CustomField>
    <fullName>Overall_RCU_Agency_Sampling_Reason__c</fullName>
    <label>Overall RCU Agency Sampling Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manipulated Document</fullName>
            </value>
            <value>
                <fullName>Adverse Profile</fullName>
            </value>
            <value>
                <fullName>Office/Residence Profile not satisfactory</fullName>
            </value>
            <value>
                <fullName>Mismatch of Address</fullName>
            </value>
            <value>
                <fullName>Misrepresentation of Facts / False details</fullName>
            </value>
            <value>
                <fullName>Profile Mismatch</fullName>
            </value>
            <value>
                <fullName>Political Connection</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>