ProdIND/ProdPrograms/force-app/main/default/objects/Case/fields/Overall_RCU_Agency_Verification_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Overall_RCU_Agency_Verification_Remarks__c</fullName>
    <label>Overall RCU Agency Verification Remarks</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>