ProdIND/ProdPrograms/force-app/main/default/objects/Case/fields/Overall_RCU_Verification_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Overall_RCU_Verification_Remarks__c</fullName>
    <label>Overall RCU Verification Remarks</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>