ProdIND/ProdPrograms/force-app/main/default/objects/Case/fields/Overall_RCU_Verification_Status__c.field-meta.xml
<CustomField>
    <fullName>Overall_RCU_Verification_Status__c</fullName>
    <label>Overall RCU Verification Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clear</fullName>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
            <value>
                <fullName>Non-clear Profile</fullName>
            </value>
            <value>
                <fullName>Refer to Credit</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Non-clear Document</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>