ProdIND/ProdPrograms/force-app/main/default/objects/Case/fields/Owner_Change_from_flow__c.field-meta.xml
<CustomField>
    <fullName>Owner_Change_from_flow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Owner Change from flow</label>
    <type>Checkbox</type>
</CustomField>