ProdIND/ProdPrograms/force-app/main/default/objects/Case/fields/Parent_FI__c.field-meta.xml
<CustomField>
    <fullName>Parent_FI__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent FI</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Parent FIs</relationshipLabel>
    <relationshipName>Parent_FI</relationshipName>
    <type>Lookup</type>
</CustomField>