ProdIND/ProdPrograms/force-app/main/default/objects/Case/fields/Priority_Flag__c.field-meta.xml
<CustomField>
    <fullName>Priority_Flag__c</fullName>
    <formula>IF(Loan_Application__r.Priority_Flag__c = TRUE,true,false)</formula>
    <label>Priority Flag</label>
    <type>Checkbox</type>
</CustomField>