ProdIND/ProdPrograms/force-app/main/default/objects/Case/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <formula>TEXT(Loan_Application__r.Product_Type__c)</formula>
    <label>Product Type</label>
    <type>Text</type>
</CustomField>