ProdIND/ProdPrograms/force-app/main/default/objects/Case/fields/RCA_By_L2_User__c.field-meta.xml
<CustomField>
    <fullName>RCA_By_L2_User__c</fullName>
    <label>RCA By L2 User</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>