ProdIND/ProdPrograms/force-app/main/default/objects/Case/fields/RCA_Type__c.field-meta.xml
<CustomField>
    <fullName>RCA_Type__c</fullName>
    <label>RCA Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Code Error</fullName>
            </value>
            <value>
                <fullName>Data Error</fullName>
            </value>
            <value>
                <fullName>Data Fix</fullName>
            </value>
            <value>
                <fullName>Code Fix</fullName>
            </value>
            <value>
                <fullName>Config Fix</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>