ProdIND/ProdPrograms/force-app/main/default/objects/Case/fields/RCU_Agent__c.field-meta.xml
<CustomField>
    <fullName>RCU_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RCU Agent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RCUAgentCases</relationshipName>
    <type>Lookup</type>
</CustomField>