ProdIND/ProdPrograms/force-app/main/default/objects/Case/fields/RejectedFI__c.field-meta.xml
<CustomField>
    <fullName>RejectedFI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RejectedFI</label>
    <type>Checkbox</type>
</CustomField>