ProdIND/ProdPrograms/force-app/main/default/objects/Case/fields/Resi_Profile__c.field-meta.xml
<CustomField>
    <fullName>Resi_Profile__c</fullName>
    <label>Resi Profile</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clear</fullName>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
            <value>
                <fullName>Non-clear Profile</fullName>
            </value>
            <value>
                <fullName>Refer to Credit</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Non-clear Document</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>