ProdIND/ProdPrograms/force-app/main/default/objects/Case/fields/Resi_Profile_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Resi_Profile_Remarks__c</fullName>
    <label>Resi Profile Remarks</label>
    <length>30000</length>
    <type>Html</type>
</CustomField>