ProdIND/ProdPrograms/force-app/main/default/objects/Case/fields/Resolution_By_L2__c.field-meta.xml
<CustomField>
    <fullName>Resolution_By_L2__c</fullName>
    <label>Resolution By L2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Admin Change</fullName>
            </value>
            <value>
                <fullName>Code Fix</fullName>
            </value>
            <value>
                <fullName>User Management</fullName>
            </value>
            <value>
                <fullName>Data request</fullName>
            </value>
            <value>
                <fullName>Enhancement Request</fullName>
            </value>
            <value>
                <fullName>Fix Needed by Vendor</fullName>
            </value>
            <value>
                <fullName>Need Fix</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>