ProdIND/ProdPrograms/force-app/main/default/objects/Case/fields/Root_Cause_details__c.field-meta.xml
<CustomField>
    <fullName>Root_Cause_details__c</fullName>
    <label>RCA By L1 User</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>